# CMVC

./: .gitignore  Pipfile  README.md  Untitled.ipynb  cross.ipynb  list_attr_celeba.txt:Zone.Identifier  list_attr_celeba.txtZone.Identifier  model_setting.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  wget-log
cmvc/: Untitled.ipynb  __init__.py  feature_path.ipynb  not_detected.txt  test-toml.py
cmvc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cmvc/learning/: Untitled.ipynb  dataloader.ipynb  dataset.py  train.py  transform.py
cmvc/models/: .model.py.swp  __init__.py  dec.py  enc.py  layer.py  model.py
cmvc/preprocessing/: image.py  not_detected.txt  voice.py
cmvc/utils/: property.py
cmvc/utils/data/: Untitled.ipynb  dataloader.ipynb  dataset.py  transform.py  voice.py
cmvc/utils/preprocessing/: image.py  voice.py
cmvc/voice_conversion/: Untitled.ipynb
src/: setup.py
src/cmvc/cmvc.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: dec.py
tests/: __init__.py  enc.py
