[tool.poetry]
name = "cmvc"
version = "0.0.3"
description = "This is a voice conversion model implemented in PyTorch."
authors = ["kjun1 <p.k.maejima1211@icloud.com>"]
readme = "README.md"

repository = "https://github.com/kjun1/CMVC"

[tool.poetry.dependencies]
python = "^3.7.11"
toml = "^0.10.2"
pyworld = "^0.2.12"
pysptk = "^0.1.18"
opencv-python = "^4.5.2"
pandas = "^1.2.4"
librosa = "^0.8.1"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp37-cp37m-linux_x86_64.whl"}
matplotlib = "^3.4.2"
tqdm = "^4.61.2"
jupyterlab = "^3.0.14"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
yapf = "^0.31.0"
isort = "^5.8.0"
sphinx-rtd-theme = "^0.5.2"
Sphinx = "^3.5.4"
black = "^21.8b0"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
