[aliases]
test=pytest

# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = cmvc
version = 0.1.0
url = "https://github.com/kjun1/CMVC"
author = "Kenya Maejima"
author_email = "p.k.maejima1211@icloud.com"
description = "パッケージの説明を書く"
#long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3.8

# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
packages = find:
install_requires =
    torch





